refatorando