@@ -1,10 +1,9 @@
 package com.ramon_silva.projeto_hotel.services;
 
 import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
@@ -22,6 +21,8 @@ import com.ramon_silva.projeto_hotel.infra.errors.GeralException;
 import com.ramon_silva.projeto_hotel.infra.errors.ResourceNotFoundException;
 import com.ramon_silva.projeto_hotel.models.HotelImage;
 import com.ramon_silva.projeto_hotel.models.HotelModel;
+import com.ramon_silva.projeto_hotel.models.RoomImage;
+import com.ramon_silva.projeto_hotel.models.RoomModel;
 import com.ramon_silva.projeto_hotel.repositories.HotelImageRepository;
 import com.ramon_silva.projeto_hotel.repositories.HotelRepository;
 import com.ramon_silva.projeto_hotel.services.interfaces.IHotelService;
@@ -36,7 +37,6 @@ public class HotelServiceIMP implements IHotelService {
 
     private HotelServiceIMP(HotelRepository hotelRepository, ModelMapper modelMapper,
             HotelImageRepository hotelImageRepository) {
-
         this.hotelRepository = hotelRepository;
         this.modelMapper = modelMapper;
         this.hotelImageRepository = hotelImageRepository;
@@ -58,14 +58,15 @@ public class HotelServiceIMP implements IHotelService {
         Sort sort = sortOrder.equalsIgnoreCase("desc") ? Sort.by(sortBy).descending() : Sort.by(sortBy).ascending();
         Pageable pageable = PageRequest.of(pageNumber, pageSize, sort);
         Page<HotelModel> page = hotelRepository.findAll(pageable);
-        List<HotelDto> hotelDtos = page.getContent().stream().map((e) -> modelMapper.map(e, HotelDto.class))
+        List<HotelDto> hotelDtos = page.getContent().stream()
+                .map((e) -> modelMapper.map(e, HotelDto.class))
                 .collect(Collectors.toList());
         PageDto<HotelDto> result = new PageDto<>(
-            hotelDtos,
-             page.getNumber(), 
-             page.getNumberOfElements(),
-             page.getSize(),
-             page.getTotalPages(), page.getTotalElements());
+                hotelDtos,
+                page.getNumber(),
+                page.getNumberOfElements(),
+                page.getSize(),
+                page.getTotalPages(), page.getTotalElements());
         return result;
     }
 
@@ -99,72 +100,83 @@ public class HotelServiceIMP implements IHotelService {
         hotelRepository.deleteById(id);
     }
 
-    @Override
-    public void addImage(long id,List<MultipartFile> file) {
-        HotelModel hotelResult = hotelRepository.findById(id)
-                .orElseThrow(() ->
-                 new ResourceNotFoundException("hotel", "id", id));
-        HotelDto hotel = modelMapper.map(hotelResult, HotelDto.class);
-        List<HotelImage> hotelImageModels = new ArrayList();
+       @Override
+    public void addImages(Long id, Map<String, MultipartFile> file) {
+        
+        HotelModel hotel = hotelRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("hotel", "id", id));
+    
+        List<HotelImage> hotelImages = hotelImageRepository.findAllByHotelId(id);
+        List<HotelImage> hotelImageModels = new ArrayList<>();
+    
         if (file != null && !file.isEmpty()) {
-            file.stream().forEach((e) -> {
+            file.forEach((key, value) -> {
                 try {
-                    HotelImageDto hotelImageDtos = new HotelImageDto();
-                    if (UploadUtil.uploadLoadImage(e, "hotel",hotel.getName())) {
-                        hotelImageDtos.setImageUrl(hotel.getName()+"-"+e.getOriginalFilename());
-                        hotelImageDtos.setHotel(hotel);
-                        hotelImageModels.add(modelMapper.map(hotelImageDtos, HotelImage.class));
-
+                    if (value != null) {
+                        String originalFilename = value.getOriginalFilename();
+                        String fileExtension = originalFilename.substring(originalFilename.lastIndexOf(".") + 1).toLowerCase();
+    
+                     
+                        if (fileExtension.equals("jpg") || fileExtension.equals("jpeg") || fileExtension.equals("png")) {
+                            String imageUrl = hotel.getName() + "-" + key + "." + fileExtension;
+    
+                            
+                            if (UploadUtil.uploadLoadImage(value, "hotel", imageUrl)) {
+                                Optional<HotelImage> searchImage = hotelImages.stream()
+                                        .filter(image -> image.getType().equals(key))
+                                        .findFirst();
+    
+                                HotelImage hotelImage = searchImage.orElseGet(HotelImage::new);
+                                hotelImage.setType(key);
+                                hotelImage.setImageUrl(imageUrl);
+                                hotelImage.setHotel(hotel);
+                                hotelImageModels.add(hotelImage);
+                            }
+                        }
                     }
                 } catch (Exception ex) {
                     ex.printStackTrace();
                 }
             });
         }
-
-        if (hotelImageModels.size() > 0) {
-
+    
+        if (!hotelImageModels.isEmpty()) {
             hotelImageRepository.saveAll(hotelImageModels);
+        }
+    }
+
+    @Override
+    public void removeImageById(Long id, Long file) {
+        Optional<HotelImage> hotelImage = hotelImageRepository.findByHotelIdAndId(id, file);
+
+        if (hotelImage.isPresent()) {
+            if (UploadUtil.removeImage("hotel", hotelImage.get().getImageUrl())) {
+                hotelImageRepository.deleteById(file);
+            } else {
+                throw new GeralException("Não foi possivel deletar o registro!");
+            }
+        } else {
+            throw new ResourceNotFoundException("hotelImagem", "id", file);
         }
 
     }
 
     @Override
-    public void removeImageById(Long id, Long file) {
-        HotelModel hotel=hotelRepository.findById(id).orElseThrow(()->new 
-        ResourceNotFoundException("hotel", "id", id));
-       Optional<HotelImage> hotelImage=hotel.getHotelImages().stream()
-       .filter((e)->e.getId() == file).findFirst();
-       
-       if(hotelImage.isPresent()){
-           if(UploadUtil.removeImage("hotel", hotelImage.get().getImageUrl())){
-               hotelImageRepository.deleteById(file);
-           }else{
-               throw new GeralException("Não foi possivel deletar o registro!");
-           }
-       }else{
-           throw new ResourceNotFoundException("hotelImagem", "id", file);
-       }
-      
-    }
+    public PageDto<HotelImageDto> getAllImages(Long id, int pageNumber, int pageSize, String sortBy, String sortOrder) {
+        Sort sort = sortOrder.equalsIgnoreCase("desc") ? Sort.by(sortBy).descending() : Sort.by(sortBy).ascending();
+        Pageable pageable = PageRequest.of(pageNumber, pageSize, sort);
+        Page<HotelImage> page = hotelImageRepository.findAllByHotelId(id, pageable);
 
-    @Override
-    public PageDto<HotelImageDto> getAllImages(Long id, int pageNumber, int pageSize,String sortBy, String sortOrder) {
-        Sort sort=sortOrder.equalsIgnoreCase("desc")? Sort.by(sortBy).descending():Sort.by(sortBy).ascending();
-        Pageable pageable=PageRequest.of(pageNumber, pageSize, sort);
-        Page<HotelImage> page=hotelImageRepository.findAllByHotelId(id,pageable);
-        List<HotelImageDto> hotelImageDtos=page.getContent().stream().map((e)->modelMapper.map(e, HotelImageDto.class)).toList();
-        PageDto<HotelImageDto> result=new PageDto<>(hotelImageDtos, 
-        page.getNumber(), 
-        page.getNumberOfElements(),
-        page.getSize(),
-        page.getTotalPages(), 
-        page.getTotalElements());
+        List<HotelImageDto> hotelImageDtos = page.getContent().stream()
+                .map((e) -> modelMapper.map(e, HotelImageDto.class)).collect(Collectors.toList());
+        PageDto<HotelImageDto> result = new PageDto<>(hotelImageDtos,
+                page.getNumber(),
+                page.getNumberOfElements(),
+                page.getSize(),
+                page.getTotalPages(),
+                page.getTotalElements());
 
         return result;
     }
 
-
 }
-
-
